--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 VoiceMan change log!
 
+Version: 1.5.0.2 (2012-09-09).
+	* Patch by Dmitri Paduchikh applied to fix gcc-4.7 compilation.
+
 Version: 1.5.0.1 (2011-05-17).
 	* Fixed bug with processing pitch values in emacspeak client.
 	* Fixed bug with processing multiple lines in executor output.
