--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 VoiceMan change log!
 
+	Version: 1.5.2 (2016-03-29)
+	* Environment variable VOICEMAN_LIBAO_DRIVER added
+
 	Bug fixes by Dmitri Paduchikh:
 * integer overflow bug fix in the TextParam class;
 * client data loss caused by improper UTF-8 processing at buffer  bounds is fixed;
